tests/tests/snapshots/test__serde_default_phases__serde-default-phases-collection-propagation.snap
---
source: tests/tests/serde_default_phases.rs
assertion_line: 328
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
/**
 *  Container references through `Vec<T>` and `HashMap<K, V>` values must
 *  also be redirected to the matching phase half.
 */
export type CollectionParent = CollectionParent_Serialize | CollectionParent_Deserialize;

/**
 *  Container references through `Vec<T>` and `HashMap<K, V>` values must
 *  also be redirected to the matching phase half.
 */
export type CollectionParent_Deserialize = {
	list: WithFieldDefault_Deserialize[],
	map: { [key in string]: WithFieldDefault_Deserialize },
};

/**
 *  Container references through `Vec<T>` and `HashMap<K, V>` values must
 *  also be redirected to the matching phase half.
 */
export type CollectionParent_Serialize = {
	list: WithFieldDefault_Serialize[],
	map: { [key in string]: WithFieldDefault_Serialize },
};

/**
 *  Enum variant payloads referencing a `default`-split type must also be
 *  redirected per phase.
 */
export type EnumParent = EnumParent_Serialize | EnumParent_Deserialize;

/**
 *  Enum variant payloads referencing a `default`-split type must also be
 *  redirected per phase.
 */
export type EnumParent_Deserialize = { Payload: WithFieldDefault_Deserialize } | "Nothing";

/**
 *  Enum variant payloads referencing a `default`-split type must also be
 *  redirected per phase.
 */
export type EnumParent_Serialize = { Payload: WithFieldDefault_Serialize } | "Nothing";

export type WithFieldDefault = WithFieldDefault_Serialize | WithFieldDefault_Deserialize;

export type WithFieldDefault_Deserialize = {
	a?: number,
};

export type WithFieldDefault_Serialize = {
	a: number,
};
