tests/tests/snapshots/test__serde_default_phases__serde-default-phases-container-default-option.snap
---
source: tests/tests/serde_default_phases.rs
assertion_line: 349
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
/**
 *  Container-level `#[serde(default)]` combined with an `Option<T>` field:
 *  serialize must be `a: number | null` (always emitted, nullable),
 *  deserialize `a?: number | null`.
 */
export type ContainerDefaultWithOption = ContainerDefaultWithOption_Serialize | ContainerDefaultWithOption_Deserialize;

/**
 *  Container-level `#[serde(default)]` combined with an `Option<T>` field:
 *  serialize must be `a: number | null` (always emitted, nullable),
 *  deserialize `a?: number | null`.
 */
export type ContainerDefaultWithOption_Deserialize = {
	a?: number | null,
};

/**
 *  Container-level `#[serde(default)]` combined with an `Option<T>` field:
 *  serialize must be `a: number | null` (always emitted, nullable),
 *  deserialize `a?: number | null`.
 */
export type ContainerDefaultWithOption_Serialize = {
	a: number | null,
};
