tests/tests/snapshots/test__serde_default_phases__serde-default-phases-container-default.snap
---
source: tests/tests/serde_default_phases.rs
assertion_line: 142
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type WithContainerDefault = WithContainerDefault_Serialize | WithContainerDefault_Deserialize;

export type WithContainerDefault_Deserialize = {
	a?: number,
	b?: string,
};

export type WithContainerDefault_Serialize = {
	a: number,
	b: string,
};
