tests/tests/snapshots/test__serde_default_phases__serde-default-phases-default-with-skip-if.snap
---
source: tests/tests/serde_default_phases.rs
assertion_line: 218
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
/**
 *  A field with both `default` and `skip_serializing_if` was already a
 *  direction-difference before this fix (via `skip_serializing_if`). Adding
 *  `default` to the local-difference check must not double-split it or
 *  change its already-correct shape.
 */
export type WithDefaultAndSkipIf = WithDefaultAndSkipIf_Serialize | WithDefaultAndSkipIf_Deserialize;

/**
 *  A field with both `default` and `skip_serializing_if` was already a
 *  direction-difference before this fix (via `skip_serializing_if`). Adding
 *  `default` to the local-difference check must not double-split it or
 *  change its already-correct shape.
 */
export type WithDefaultAndSkipIf_Deserialize = {
	a?: number | null,
};

/**
 *  A field with both `default` and `skip_serializing_if` was already a
 *  direction-difference before this fix (via `skip_serializing_if`). Adding
 *  `default` to the local-difference check must not double-split it or
 *  change its already-correct shape.
 */
export type WithDefaultAndSkipIf_Serialize = {
	a?: number,
};
