tests/tests/snapshots/test__serde_default_phases__serde-default-phases-field-default.snap
---
source: tests/tests/serde_default_phases.rs
assertion_line: 106
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type WithFieldDefault = WithFieldDefault_Serialize | WithFieldDefault_Deserialize;

export type WithFieldDefault_Deserialize = {
	a?: number,
};

export type WithFieldDefault_Serialize = {
	a: number,
};
