tests/tests/snapshots/test__serde_default_phases__serde-default-phases-flatten-propagation.snap
---
source: tests/tests/serde_default_phases.rs
assertion_line: 308
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
/**
 *  Flatten lowers to an intersection; each phase of the parent must
 *  intersect with the matching phase of the flattened `default`-split type.
 */
export type FlattenParent = FlattenParent_Serialize | FlattenParent_Deserialize;

/**
 *  Flatten lowers to an intersection; each phase of the parent must
 *  intersect with the matching phase of the flattened `default`-split type.
 */
export type FlattenParent_Deserialize = {
	own: boolean,
} & WithFieldDefault_Deserialize;

/**
 *  Flatten lowers to an intersection; each phase of the parent must
 *  intersect with the matching phase of the flattened `default`-split type.
 */
export type FlattenParent_Serialize = {
	own: boolean,
} & WithFieldDefault_Serialize;

export type WithFieldDefault = WithFieldDefault_Serialize | WithFieldDefault_Deserialize;

export type WithFieldDefault_Deserialize = {
	a?: number,
};

export type WithFieldDefault_Serialize = {
	a: number,
};
