tests/tests/snapshots/test__serde_default_phases__serde-default-phases-generic-propagation.snap
---
source: tests/tests/serde_default_phases.rs
assertion_line: 297
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
/**
 *  A `#[serde(default)]`-only type must force a split of every dependent,
 *  with each half referencing the matching half — including through generic
 *  instantiation, which exercises the reference-generics rewrite path.
 */
export type GenericParent = GenericParent_Serialize | GenericParent_Deserialize;

/**
 *  A `#[serde(default)]`-only type must force a split of every dependent,
 *  with each half referencing the matching half — including through generic
 *  instantiation, which exercises the reference-generics rewrite path.
 */
export type GenericParent_Deserialize = {
	w: Wrapper<WithFieldDefault_Deserialize>,
};

/**
 *  A `#[serde(default)]`-only type must force a split of every dependent,
 *  with each half referencing the matching half — including through generic
 *  instantiation, which exercises the reference-generics rewrite path.
 */
export type GenericParent_Serialize = {
	w: Wrapper<WithFieldDefault_Serialize>,
};

export type WithFieldDefault = WithFieldDefault_Serialize | WithFieldDefault_Deserialize;

export type WithFieldDefault_Deserialize = {
	a?: number,
};

export type WithFieldDefault_Serialize = {
	a: number,
};

export type Wrapper<T> = {
	inner: T,
};
