tests/tests/snapshots/test__serde_default_phases__serde-default-phases-option-default.snap
---
source: tests/tests/serde_default_phases.rs
assertion_line: 203
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type WithOptionDefault = WithOptionDefault_Serialize | WithOptionDefault_Deserialize;

export type WithOptionDefault_Deserialize = {
	a?: number | null,
};

export type WithOptionDefault_Serialize = {
	a: number | null,
};
