tests/tests/snapshots/test__serde_default_phases__serde-default-phases-tuple-default.snap
---
source: tests/tests/serde_default_phases.rs
assertion_line: 905
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
/**
 *  A newtype (single unnamed field) has no container to omit the value
 *  from — `default` is inert on the wire, so it must not split.
 */
export type NewtypeDefault = number;

/**
 *  A trailing `#[serde(default)]` tuple element may be omitted on
 *  deserialize (`[1]` is accepted) but is always emitted on serialize.
 *  serde_derive rejects a required field after a defaulted one, so defaults
 *  always form a suffix and TypeScript's trailing `?` can express them.
 */
export type TupleDefault = TupleDefault_Serialize | TupleDefault_Deserialize;

/**
 *  A trailing `#[serde(default)]` tuple element may be omitted on
 *  deserialize (`[1]` is accepted) but is always emitted on serialize.
 *  serde_derive rejects a required field after a defaulted one, so defaults
 *  always form a suffix and TypeScript's trailing `?` can express them.
 */
export type TupleDefault_Deserialize = [number, number?];

/**
 *  A trailing `#[serde(default)]` tuple element may be omitted on
 *  deserialize (`[1]` is accepted) but is always emitted on serialize.
 *  serde_derive rejects a required field after a defaulted one, so defaults
 *  always form a suffix and TypeScript's trailing `?` can express them.
 */
export type TupleDefault_Serialize = [number, number];

/**  Tuple-variant counterpart of [`TupleDefault`]. */
export type TupleVariantDefault = TupleVariantDefault_Serialize | TupleVariantDefault_Deserialize;

/**  Tuple-variant counterpart of [`TupleDefault`]. */
export type TupleVariantDefault_Deserialize = { V: [number, number?] };

/**  Tuple-variant counterpart of [`TupleDefault`]. */
export type TupleVariantDefault_Serialize = { V: [number, number] };
