tests/tests/snapshots/test__serde_default_phases__serde-default-phases-unified-format-control.snap
---
source: tests/tests/serde_default_phases.rs
assertion_line: 173
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type WithFieldDefault = {
	a?: number,
};
