tests/tests/snapshots/test__serde_default_phases__serde-default-phases-variant-field-default.snap
---
source: tests/tests/serde_default_phases.rs
assertion_line: 406
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
/**
 *  `#[serde(default)]` on a struct-variant field goes through the same
 *  field-level local-difference check as struct fields and must split the
 *  enum.
 */
export type VariantFieldDefault = VariantFieldDefault_Serialize | VariantFieldDefault_Deserialize;

/**
 *  `#[serde(default)]` on a struct-variant field goes through the same
 *  field-level local-difference check as struct fields and must split the
 *  enum.
 */
export type VariantFieldDefault_Deserialize = { A: {
	x?: number,
} };

/**
 *  `#[serde(default)]` on a struct-variant field goes through the same
 *  field-level local-difference check as struct fields and must split the
 *  enum.
 */
export type VariantFieldDefault_Serialize = { A: {
	x: number,
} };
